samples/_failures_safe/1761539058_2805ec_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_92c3d61e.c:188:1: error: expected identifier or ‘(’ at end of input
  188 | void
      | ^~~~
